--- a/categories.html
+++ b/categories.html
@@ -11,7 +11,7 @@ title: Categories
             {% for post in category[1] %}
                 <li>
                     <h3><a href="{{post.url}}">{{post.title}}</a></h3>
-                    <p>{{post.excerpt}}</p>
+                    <div class="excerpt" title="{{post.title}}">{{post.excerpt}}</div>
                 </li>                
             {% endfor %}
     {% endfor %}
