--- a/tags.html
+++ b/tags.html
@@ -6,12 +6,12 @@ title: Tags
 
 <ul>
     {% for tag in site.tags %}
-        <h2>{{tag[0] | capitalize }}</h2>
+        <h2 id="{{tag[0]}}">{{tag[0] | capitalize }}</h2>
 
             {% for post in tag[1] %}
             <li>
                 <h3><a href="{{post.url}}">{{post.title}}</a></h3>
-                <p>{{post.excerpt}}</p>
+                <div class="excerpt" title="{{post.title}}">{{post.excerpt}}</div>
             </li>
             {% endfor %}
     {% endfor %}
