💄 Add init colors

--- a/index.html
+++ b/index.html
@@ -4,29 +4,31 @@ title: Posts
 ---
 <h1>Posts</h1>
 
-<section class="last-post">
+<!-- <section class="last-post">
     {%- assign last_post = site.posts[0] -%}
     <h2>Most Recent Post</h2>
     <h3><a href="{{last_post.url}}">{{last_post.title}}</a></h3>
     <a href="{{last_post.url}}" class="excerpt" title="{{last_post.title}}">{{last_post.excerpt}}</a>
-</section>
+</section> -->
 
-<ul>
-    <h2>All Posts</h2>
-    {% for post in site.posts %}
-        <li>
-            <h3><a href="{{post.url}}">{{post.title}}</a></h3>
-            <a href="{{post.url}}" class="excerpt" title="{{post.title}}">{{post.excerpt}}</a>
-            {% include read-more-btn.html link=post.url %}     
-        </li>
-    {% endfor %}
-</ul>
+<section class="posts">
+    <!-- <h2>All Posts</h2> -->
+    <ul>
+        {% for post in site.posts %}
+            <li>
+                <h3><a href="{{post.url}}">{{post.title}}</a></h3>
+                <a href="{{post.url}}" class="excerpt" title="{{post.title}}">{{post.excerpt}}</a>
+                {% include read-more-btn.html link=post.url %}     
+            </li>
+        {% endfor %}
+    </ul>
+</section>
 
 <section class="browse-categories">
     <h2>Browse Categories</h2>
     <ul>
         {% for category in site.categories %}
-            <li><a href="">{{category[0] | capitalize }}</a></li>
+            <li><a href="/categories.html#{{category[0]}}">{{category[0] | capitalize }}</a></li>
         {% endfor %}
     </ul>
     
