--- a/tags.html
+++ b/tags.html
@@ -3,6 +3,13 @@ layout: default
 title: Tags
 ---
 <h1>Tags</h1>
+<ul>
+   {% for tag in site.tags %}
+        <li>
+            <a href="#{{tag[0]}}">{{tag[0] | capitalize }}</a>
+        </li>
+    {% endfor %} 
+</ul>
 
 <ul>
     {% for tag in site.tags %}
