💄 Improve visual language of page headings

--- a/about.html
+++ b/about.html
@@ -2,10 +2,12 @@
 title: About Me
 layout: default
 ---
-# About Me
+<h1>About Me</h1>
 
-- Github: [@bschenerman](https://github.com/bschenerman/)
-- Twitter: [@webSchen](https://twitter.com/webSchen)
-- Email: [hello@benschenerman.com](mailto:hello@benschenerman.com)
+<ul class="tags">
+    <li><span>Github: </span><a href="https://github.com/bschenerman/">@bschenerman</a></li>
+    <li><span>Twitter: </span><a href="https://github.com/bschenerman/">@webSchen</a></li>
+    <li><span>Email: </span><a href="mailto:hello@benschenerman.com">hello@benschenerman.com</a></li>
+</ul>
 
 <p>My formal work experience includes working for the <a href="https://water.phila.gov" target="blank">Philadelphia Water Dept.</a> Public Affairs division as a web designer and developer, <a href="https://mghus.com" target="blank">MGH Marketing</a> in Baltimore as a web designer and developer, and Drexel University Student Technicians as a crew head, where I continue to work part-time during academic terms. In my spare time, I am an audio supervisor and sound designer for Drexel's Co-op Theater co., the RPM/Electronic director at <a href="http://wkdu.org" target="blank">WKDU Philadelphia 91.7 FM</a>, and an experimental electronic/pop <a href="https://soundcloud.com/cynabel" target="blank">music producer</a>.</p>
