🌱 Add first post

--- a/about.html
+++ b/about.html
@@ -10,4 +10,6 @@ layout: default
     <li><span>Email: </span><a href="mailto:hello@benschenerman.com">hello@benschenerman.com</a></li>
 </ul>
 
+<p>This blog is dedicated to learning more about web design, development, usability testing, accessibility, and more.</p>
+
 <p>My formal work experience includes working for the <a href="https://water.phila.gov" target="blank">Philadelphia Water Dept.</a> Public Affairs division as a web designer and developer, <a href="https://mghus.com" target="blank">MGH Marketing</a> in Baltimore as a web designer and developer, and Drexel University Student Technicians as a crew head, where I continue to work part-time during academic terms. In my spare time, I am an audio supervisor and sound designer for Drexel's Co-op Theater co., the RPM/Electronic director at <a href="http://wkdu.org" target="blank">WKDU Philadelphia 91.7 FM</a>, and an experimental electronic/pop <a href="https://soundcloud.com/cynabel" target="blank">music producer</a>.</p>
